# uart-over-rs485-protocol

./: README.md
client/: Cargo.toml
client/src/: main.rs
firmware/: Cargo.toml  Embed.toml
firmware/src/: main.rs
